<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Task Title -->
    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/hint_task_title"
        android:textColor="@color/black"
        android:textColorHint="#505050"
        android:background="@color/white"
        android:inputType="text"
        android:padding="12dp"
        android:autofillHints="username"
        android:maxWidth="300dp" />

    <!-- Task Description -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/hint_task_description"
        android:textColor="@color/black"
        android:textColorHint="#505050"
        android:background="@color/white"
        android:inputType="text"
        android:padding="12dp"
        android:autofillHints="address"
        android:maxWidth="300dp" />

    <!-- Task Due Date -->
    <EditText
        android:id="@+id/editTextDueDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/hint_task_due_date"
        android:textColor="@color/black"
        android:textColorHint="#505050"
        android:background="@color/white"
        android:inputType="date"
        android:focusable="false"
        android:padding="12dp"
        android:autofillHints="date"
        android:maxWidth="300dp" />


    <!-- Save Button -->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:background="@color/black"
        android:padding="12dp"
        android:maxWidth="300dp"/>
</LinearLayout>